k8s/apps/keycloack/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 80
  selector:
    app: keycloak
  type: ClusterIP
