k8s/apps/keycloack/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloack
  namespace: keycloack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.armleth.fr`)
      services:
        - name: keycloack
          port: 8080
  tls:
    secretName: armleth-tls-secret
